{
  "version": 4,
  "terraform_version": "1.11.3",
  "serial": 24,
  "lineage": "8fd62ac4-ae30-b186-cafd-3d530f0749f2",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic_internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/99bbc184-edd8-464d-964d-9f3a0d74bba3/resourceGroups/rg-landingzone-sec/providers/Microsoft.Network/networkInterfaces/nic-internal",
            "internal_domain_name_suffix": "04w35f4xbkfelj0l4e131jazjb.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.2.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/99bbc184-edd8-464d-964d-9f3a0d74bba3/resourceGroups/rg-landingzone-sec/providers/Microsoft.Network/virtualNetworks/vnet-hub/subnets/subnet-internal"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "westeurope",
            "mac_address": "7C-ED-8D-15-DA-19",
            "name": "nic-internal",
            "private_ip_address": "10.0.2.4",
            "private_ip_addresses": [
              "10.0.2.4"
            ],
            "resource_group_name": "rg-landingzone-sec",
            "virtual_machine_id": "/subscriptions/99bbc184-edd8-464d-964d-9f3a0d74bba3/resourceGroups/rg-landingzone-sec/providers/Microsoft.Compute/virtualMachines/vm-internal"
          },
          "dependencies": [
            "azurerm_resource_group.rg_main",
            "azurerm_subnet.subnet_internal",
            "azurerm_virtual_network.vnet_hub"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/99bbc184-edd8-464d-964d-9f3a0d74bba3/resourceGroups/rg-landingzone-sec/providers/Microsoft.Network/networkInterfaces/nic-web",
            "internal_domain_name_suffix": "04w35f4xbkfelj0l4e131jazjb.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/99bbc184-edd8-464d-964d-9f3a0d74bba3/resourceGroups/rg-landingzone-sec/providers/Microsoft.Network/publicIPAddresses/pip-web",
                "subnet_id": "/subscriptions/99bbc184-edd8-464d-964d-9f3a0d74bba3/resourceGroups/rg-landingzone-sec/providers/Microsoft.Network/virtualNetworks/vnet-hub/subnets/subnet-web"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "westeurope",
            "mac_address": "7C-1E-52-74-C1-B4",
            "name": "nic-web",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "rg-landingzone-sec",
            "virtual_machine_id": "/subscriptions/99bbc184-edd8-464d-964d-9f3a0d74bba3/resourceGroups/rg-landingzone-sec/providers/Microsoft.Compute/virtualMachines/vm-web"
          },
          "dependencies": [
            "azurerm_public_ip.pip_web",
            "azurerm_resource_group.rg_main",
            "azurerm_subnet.subnet_web",
            "azurerm_virtual_network.vnet_hub"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg_internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/99bbc184-edd8-464d-964d-9f3a0d74bba3/resourceGroups/rg-landingzone-sec/providers/Microsoft.Network/networkSecurityGroups/nsg-internal",
            "location": "westeurope",
            "name": "nsg-internal",
            "resource_group_name": "rg-landingzone-sec",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowFromWebSubnet",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "10.0.1.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Deny",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "DenyAllInbound",
                "priority": 200,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/99bbc184-edd8-464d-964d-9f3a0d74bba3/resourceGroups/rg-landingzone-sec/providers/Microsoft.Network/networkSecurityGroups/nsg-web",
            "location": "westeurope",
            "name": "nsg-web",
            "resource_group_name": "rg-landingzone-sec",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowSSH",
                "priority": 110,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowHTTP",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "pip_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/99bbc184-edd8-464d-964d-9f3a0d74bba3/resourceGroups/rg-landingzone-sec/providers/Microsoft.Network/publicIPAddresses/pip-web",
            "idle_timeout_in_minutes": 4,
            "ip_address": "51.144.243.254",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "pip-web",
            "resource_group_name": "rg-landingzone-sec",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.rg_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet_internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/99bbc184-edd8-464d-964d-9f3a0d74bba3/resourceGroups/rg-landingzone-sec/providers/Microsoft.Network/virtualNetworks/vnet-hub/subnets/subnet-internal",
            "name": "subnet-internal",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-landingzone-sec",
            "virtual_network_name": "vnet-hub"
          },
          "dependencies": [
            "azurerm_resource_group.rg_main",
            "azurerm_virtual_network.vnet_hub"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/99bbc184-edd8-464d-964d-9f3a0d74bba3/resourceGroups/rg-landingzone-sec/providers/Microsoft.Network/virtualNetworks/vnet-hub/subnets/subnet-web",
            "name": "subnet-web",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-landingzone-sec",
            "virtual_network_name": "vnet-hub"
          },
          "dependencies": [
            "azurerm_resource_group.rg_main",
            "azurerm_virtual_network.vnet_hub"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "nsg_assoc_internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/99bbc184-edd8-464d-964d-9f3a0d74bba3/resourceGroups/rg-landingzone-sec/providers/Microsoft.Network/virtualNetworks/vnet-hub/subnets/subnet-internal",
            "network_security_group_id": "/subscriptions/99bbc184-edd8-464d-964d-9f3a0d74bba3/resourceGroups/rg-landingzone-sec/providers/Microsoft.Network/networkSecurityGroups/nsg-internal",
            "subnet_id": "/subscriptions/99bbc184-edd8-464d-964d-9f3a0d74bba3/resourceGroups/rg-landingzone-sec/providers/Microsoft.Network/virtualNetworks/vnet-hub/subnets/subnet-internal"
          },
          "dependencies": [
            "azurerm_network_security_group.nsg_internal",
            "azurerm_resource_group.rg_main",
            "azurerm_subnet.subnet_internal",
            "azurerm_virtual_network.vnet_hub"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "nsg_assoc_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/99bbc184-edd8-464d-964d-9f3a0d74bba3/resourceGroups/rg-landingzone-sec/providers/Microsoft.Network/virtualNetworks/vnet-hub/subnets/subnet-web",
            "network_security_group_id": "/subscriptions/99bbc184-edd8-464d-964d-9f3a0d74bba3/resourceGroups/rg-landingzone-sec/providers/Microsoft.Network/networkSecurityGroups/nsg-web",
            "subnet_id": "/subscriptions/99bbc184-edd8-464d-964d-9f3a0d74bba3/resourceGroups/rg-landingzone-sec/providers/Microsoft.Network/virtualNetworks/vnet-hub/subnets/subnet-web"
          },
          "dependencies": [
            "azurerm_network_security_group.nsg_web",
            "azurerm_resource_group.rg_main",
            "azurerm_subnet.subnet_web",
            "azurerm_virtual_network.vnet_hub"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet_hub",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "97dfadd7-0ad7-458a-a74b-f137dda41949",
            "id": "/subscriptions/99bbc184-edd8-464d-964d-9f3a0d74bba3/resourceGroups/rg-landingzone-sec/providers/Microsoft.Network/virtualNetworks/vnet-hub",
            "location": "westeurope",
            "name": "vnet-hub",
            "private_endpoint_vnet_policies": "Disabled",
            "resource_group_name": "rg-landingzone-sec",
            "subnet": [
              {
                "address_prefixes": [
                  "10.0.1.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/99bbc184-edd8-464d-964d-9f3a0d74bba3/resourceGroups/rg-landingzone-sec/providers/Microsoft.Network/virtualNetworks/vnet-hub/subnets/subnet-web",
                "name": "subnet-web",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true,
                "security_group": "/subscriptions/99bbc184-edd8-464d-964d-9f3a0d74bba3/resourceGroups/rg-landingzone-sec/providers/Microsoft.Network/networkSecurityGroups/nsg-web"
              },
              {
                "address_prefixes": [
                  "10.0.2.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/99bbc184-edd8-464d-964d-9f3a0d74bba3/resourceGroups/rg-landingzone-sec/providers/Microsoft.Network/virtualNetworks/vnet-hub/subnets/subnet-internal",
                "name": "subnet-internal",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true,
                "security_group": "/subscriptions/99bbc184-edd8-464d-964d-9f3a0d74bba3/resourceGroups/rg-landingzone-sec/providers/Microsoft.Network/networkSecurityGroups/nsg-internal"
              }
            ]
          },
          "dependencies": [
            "azurerm_resource_group.rg_main"
          ]
        }
      ]
    }
  ]
}